--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,27 @@
-h2{
-    color: blue;
+body{
+  background:#1A0B2E;
+  color:white;
 }
+/* design nav-bar */
+.linear-text, .nav-btn{
+  background:linear-gradient(90deg,#F7E93F 0%,#FB09B4 51%,#9100F8 100%);
+}
+.nav-bar{
+  margin: 6px 200px;
+}
+
+.nav-btn{
+  color:white;
+  /* border: 1px solid #FFFFFF; */
+  padding:4px;
+  border-radius:10000px;
+  cursor:pointer;
+  }
+
+  .Wave{
+    color:#FB09B4;
+  }
+
+  .nav-btn:hover{
+    background:linear-gradient(90deg,#9100F8 0%,#FB09B4 51%,#F7E93F 100%);
+  }
